--- a/index.html
+++ b/index.html
@@ -80,5 +80,14 @@
         </div>
     </section>
     </div>
+    <footer>
+        <div class="contact">
+            <h3>Contact us</h3>
+            <img class="mail" src="./assets/mail.png">
+            <p>email@beer.com</p>
+            <img class="phone" src="./assets/phone.png">
+            <p>+3712674563</p>
+        </div>
+    </footer>
 </body>
 </html>
