--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="./script.js" defer></script>
     <title>Beerhouse</title>
 </head>
 <body>
+    <nav class="dropdown">
+        <ul>
+            <li><a href="#" class="navlink mobile">Donate</a></li>
+            <li><a href="#" class="navlink mobile">Events</a></li>
+            <li><a href="#" class="navlink mobile">Message Us</a></li>
+        </ul>
+    </nav>
 
     <nav>
         <div class="container">
@@ -21,9 +29,9 @@
                 <li><a href="#" class="navlink">Donate</a></li>
             </ul>
             <div class="hamburger">
-                <div class="patty"></div>
-                <div class="patty"></div>
-                <div class="patty"></div>
+                <div class="patty top"></div>
+                <div class="patty middle"></div>
+                <div class="patty bottom"></div>
             </div>
         </div>
     </nav>
